# stepopt

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  base.py  constraint.py  functions.py  info.py  optimisers.py  oracle.py  problems.py  stopping.py  types.py  utils.py
src/cmo/: __init__.py  base.py  constrained.py  constraint.py  core.py  functions.py  helpers.py  info.py  logging.py  optimisers.py  oracle.py  problems.py  stopping.py  types.py  utils.py
src/cmo/array/: __init__.py  core.py  numpy.py  python.py
src/cmo/constrained/: constrained.py  constraint.py  optimisers.py
src/cmo/core/: __init__.py  base.py  info.py  oracle.py  stopping.py
src/cmo/functions/: __init__.py  base.py  protocol.py  test.py
src/cmo/optimisers/: __init__.py  conjugate_gradient.py  line_search.py  quasi_newton.py
src/cmo/unconstrained/: __init__.py  conjugate_gradient.py  line_search.py  quasi_newton.py
src/cmo/utils/: __init__.py  format.py  helpers.py  logging.py  utils.py
src/stepopt/: __init__.py  problems.py  types.py
src/stepopt/array/: __init__.py  core.py  numpy.py  python.py
src/stepopt/constrained/: constraint.py  optimisers.py
src/stepopt/core/: __init__.py  base.py  info.py  oracle.py  stopping.py
src/stepopt/functions/: __init__.py  base.py  protocol.py  test.py
src/stepopt/unconstrained/: __init__.py  conjugate_gradient.py  line_search.py  quasi_newton.py
src/stepopt/utils/: __init__.py  format.py  helpers.py  logging.py
tests/: test_active_set.py  test_convex_quadratic.py  test_rosenbrock.py
tests/array/: test_pyndarray.py
utils/: oracle.py
