[project]
name = "stepopt"
version = "0.1.5"
description = "Optimisation algorithms"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
readme = "./README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "rich>=15.0.0",
    "typingkit",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-memray>=1.8.0"]
extra = ["cvxpy>=1.8.2", "scipy>=1.17.1", "scipy-stubs>=1.17.1.4"]
notebook = ["jupyter>=1.1.1"]
lint = ["ruff>=0.15.12"]
typecheck = [
    "basedpyright>=1.39.3",
    "mypy[mypyc]>=1.20.2",
    "pyrefly>=0.63.0",
    "pyright>=1.1.409",
    "ty>=0.0.33",
    "zuban>=0.7.1",
]

[tool.uv.sources]
typingkit = { git = "https://github.com/AshrithSagar/typingkit.git", rev = "main" }
